# wargs-pkg-debian

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  aclocal.m4  configure  configure.ac  wargs_0.2.orig.tar.gz.delta  wargs_0.2.orig.tar.gz.id  wargs_0.3.orig.tar.gz.delta  wargs_0.3.orig.tar.gz.id
debian/: changelog  control  copyright  install  menu  postinst  postrm  preinst  prerm  rules
src/: Makefile.am  Makefile.in  Makefile.windows  asm.h  assert.h  audio.c  audio.h  chp.S  combatii.S  conf.c  conf.h  config.h.in  config.windows.h  dos.c  exit.c  exit.h  filepath.c  filepath.h  game.c  game.h  keyboard.c  keyboard.h  list.c  list.h  log.c  log.h  mouse.c  mouse.h  pack.S  ttl.S  util.c  util.h  video.c  video.h  wargs-chp.c  wargs-combatii.c  wargs-pack.c  wargs-ttl.c  wargs.c
tool/: mkwrappers  mkwrappers.conf  wargs-run  wargs-setup
